--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 streamlit~=1.22.0
-git+https://github.com/streamlit/files-connection
+git+https://github.com/streamlit/files-connection@add-json-and-inferred-format
 huggingface_hub~=0.14.1
